--- a/index.html
+++ b/index.html
@@ -10,7 +10,12 @@
         </head>
 
 	<body>
-		<div class="container"></div>
+		<div class="container">
+
+			<div class="grid"></div>
+			<div class="mini-grid"></div>
+
+		</div>
 	</body>
 	
 	<script defer src="script.js"></script>
