add buttons to start/pause/resume game

--- a/index.html
+++ b/index.html
@@ -13,7 +13,18 @@
 		<div class="container">
 
 			<div class="grid"></div>
-			<div class="mini-grid"></div>
+
+			<div class="left-side">
+			
+				<div class="mini-grid"></div>
+
+				<div class="buttons">
+					<button class="start-btn">Start Game</button>
+					<button class="pause-btn">Pause Game</button>
+					<button class="resume-btn">Resume Game</button>
+				</div>
+
+			</div>
 
 		</div>
 	</body>
