fis issue where start button wasn't working properly and add button to reset game

--- a/index.html
+++ b/index.html
@@ -17,11 +17,12 @@
 			<div class="left-side">
 			
 				<div class="mini-grid"></div>
-
+				<div class="display-score">Score: <span id="score">0</span></div>
 				<div class="buttons">
 					<button class="start-btn">Start Game</button>
 					<button class="pause-btn">Pause Game</button>
 					<button class="resume-btn">Resume Game</button>
+					<button class="reset-btn">Reset Game</button>
 				</div>
 
 			</div>
